clang/test/BSC/Negative/Parser/detect_eof/detect_eof_struct_2.cbs
// RUN: %clang_cc1 -fsyntax-only -verify %s

_Static_assert(struct // expected-error {{expected expression}}